--- a/src/pages/updates.mdx
+++ b/src/pages/updates.mdx
@@ -1,4 +1,4 @@
-import { Main } from "@/layouts/rwth/Main" 
+import { Main } from "@/layouts/rwth/Main";
 import { HeadLine } from "@/components/rwth/headline";
 
 <Main>
@@ -7,8 +7,17 @@ import { HeadLine } from "@/components/rwth/headline";
 
 <div className="markdown">
 
-Ich werde mal wieder HTWR machen. Zumindest für [Stocha](/wsi) und [Malo](/cigol). 
+## DBIS
 
+Zu DBIS habe ich noch keine Ahnung. Am besten irgendwas Unterhaltsames dbis ist sonst so elendig langweilig.
+
+Das Fach gibt eigentlich genug her mit der **Shitshow** die diese Abgabenkorrekturen waren.
+
+## MALO
+
+MALO content wird im Kindheitsbücher Stil gemacht. Ich hoffe ich finde dazu nach stocha schon ein bisschen Zeit.
+
+<br />
 ## Zum Thema Unterstützung
 
 Ich werde versuchen es leichter zu machen selber Sachen zu schreiben, zu korrigieren etc.
@@ -17,11 +26,11 @@ Für Fächer, die jetzt schon da sind also MALO, STOCHA, DATCOM, BUK, SWT ist es
 Es gibt im [git repo](https://github.com/JohnnyS318/htwr-aachen.de) einen Ordner `/teachings`. Hier sind die Sachen in Institute geordnet.
 Ein neue Datei wird direkt erkannt und auf der Seite angezeigt.
 
-Die Schreibweise ist einfach Markdown. Es gibt Cheat Sheets im  [Internet](https://www.markdownguide.org/cheat-sheet/).
+Die Schreibweise ist einfach Markdown. Es gibt Cheat Sheets im [Internet](https://www.markdownguide.org/cheat-sheet/).
 Das allermeiste wird unterstützt.
 
 Ein Update kann dann einfach über ein Pull Request gemacht werden.
-Also Forken, Änderungen machen und dann einen Pull Request machen oder Branch machen und dann Pull Request.
+Also Forken, Änderungen machen und dann einen Pull Request machen oder Branch machen und dann Pull Request. Muss leider so laufen sonst wird hier scheiße hochgeladen.
 
 </div>
 </Main>
