--- a/teachings/es/use-case-kopfschuss.mdx
+++ b/teachings/es/use-case-kopfschuss.mdx
@@ -1,10 +1,20 @@
 ---
 title: Use-Case-Kopfschuss (UML Use Case Diagram)[sicher]
-description: UML Use Case Diagramme 
+description: UML Use Case Diagramme
 order: 2
 author: Jonas Schneider
 date: 14/02/2023
-tags: [Analyse, UML, Use-Case, Diagramm, Aktivitätsdiagramm, AD, Use-Case-Diagramm, UC]
+tags:
+  [
+    Analyse,
+    UML,
+    Use-Case,
+    Diagramm,
+    Aktivitätsdiagramm,
+    AD,
+    Use-Case-Diagramm,
+    UC,
+  ]
 ---
 
 ## Einordnung
@@ -25,8 +35,8 @@ Hierzu folgende Definition:
 
 ### Toleranz und Willkür
 
-Die Frage der Genauigkeit, kommt bei uns relativ schnell, da wenn du in Fosap das $\in L$ weglässt, deine Klausur ungefähr so lange durchhälst wie du im Bett, 
-aber meine Meinung dazu ist... Rumpe hat selber kein Plan, wenn du etwas sieht wie \<\< abstract \>\> und \{abstract\}, 
+Die Frage der Genauigkeit, kommt bei uns relativ schnell, da wenn du in Fosap das $\in L$ weglässt, deine Klausur ungefähr so lange durchhälst wie du im Bett,
+aber meine Meinung dazu ist... Rumpe hat selber kein Plan, wenn du etwas sieht wie \<\< abstract \>\> und \{abstract\},
 dann ist das ein Hinweis, dass es wirklich egal ist solange du die grobe Struktur hast.
 
 ## UML
@@ -35,6 +45,7 @@ Hier ein Inception Diagramm über UML Diagramme:
 ![UML Diagramm der Diagramme](https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/UML-Diagrammhierarchie.svg/1920px-UML-Diagrammhierarchie.svg.png)
 
 Wichtig sind hier vorallem:
+
 - Use-Case-Diagramme
 - Klassendiagramme
 - Sequenzdiagramme
@@ -61,11 +72,11 @@ Ich wurde gebeten noch die Erweiterungen zu nennen. Also less go
 
 - **inlcludes**: ein gestrichelter Pfeil mit einfachem Pfeilkopf zeigt an, dass ein Use-Case einen anderen Use-Case enthält. Zudem schreib man auf dem Pfeil `<<include>>`
 
-- **Erweiterung**:  Falls ein Use-Case Zusatzwünsche bietet: Z.B. Ein Use Case Pizza backen mit *extension point* Belag: hat gestrichelte Pfeile (!anders herum reingehend in den Pizza backen Use-Case) mit einem Pfeilkopf und `<<extend>>` drauf.
+- **Erweiterung**: Falls ein Use-Case Zusatzwünsche bietet: Z.B. Ein Use Case Pizza backen mit _extension point_ Belag: hat gestrichelte Pfeile (!anders herum reingehend in den Pizza backen Use-Case) mit einem Pfeilkopf und `<<extend>>` drauf.
 
 ![WTF](https://media.tenor.com/y4QbP8-Oo6gAAAAd/laughing-green.gif)
 
-<RumpeQuiz/>
+<RumpeQuiz />
 
 ### Aktivitätsdiagramm (AD)
 
@@ -77,9 +88,8 @@ Diese Diagramme werden oft als Verfeinerung von Use-Case-Diagrammen benutzt, und
 
 Das ist auch alles was man da wissen muss. Achtet darauf, Gabelungen und Verzweigungen immer zusammenzuführen!!
 
-
-Verzweigungen vs. Gabelungen: Bei Verzweigungen nimmt man einen Pfad **oder** den anderen, 
-bei Gabelungen nimmt man zwingend beide, und macht auch erst weiter, wenn beide abgeschlossen sind. 
+Verzweigungen vs. Gabelungen: Bei Verzweigungen nimmt man einen Pfad **oder** den anderen,
+bei Gabelungen nimmt man zwingend beide, und macht auch erst weiter, wenn beide abgeschlossen sind.
 Die Aktionen werden hier also parallel ausgeführt.
 
 Optional:
