--- a/teachings/syscom/iso-osi-uwu.mdx
+++ b/teachings/syscom/iso-osi-uwu.mdx
@@ -7,19 +7,20 @@ description: Overview der Referenzmodelle
 ---
 
 ## Theroriescheiß
-Na gut weil die gerne in der ersten Aufgabe haben, hier mal ein kleiner Theoriescheiß. 
+
+Na gut weil die gerne in der ersten Aufgabe haben, hier mal ein kleiner Theoriescheiß.
 Ich hab das mal in zwei Teile aufgeteilt. Der erste Teil ist ein Überblick über die Nomenklatur🤓. Der zweite Teil ist dann ein Überblick über die Protokolle.
 
 Also los gehts. Ich versuche sie als allgemein gültige Definition zu halten, sodass man copy paste machen kann.
 
 - Dienst
-Kommunikationsnetze stellen Dienste zur Verfügung. Bei Diensten sind immer Kommunikationsdienste gemeint, heißt fahrlässig grob: Daten übertragen
+  Kommunikationsnetze stellen Dienste zur Verfügung. Bei Diensten sind immer Kommunikationsdienste gemeint, heißt fahrlässig grob: Daten übertragen
 
 Dienste sind also vom Netz bereitgestellte Kommunikationsfunktionen. (Teilweise auch Kommunikationsschnittstelle)
 
 - Dienstprimitiv
 
-Ein Dienst beitet verschiedene Funktionen. Eine einzelne Funktion wird als Dienstprimitiv bezeichnet. 
+Ein Dienst beitet verschiedene Funktionen. Eine einzelne Funktion wird als Dienstprimitiv bezeichnet.
 
 - Instanz
 
@@ -40,6 +41,7 @@ Dienste beschreiben Funktionen, Instanzen implementiert Protokolle die implement
 <hr className="border-black border-1"></hr>
 
 ## ISO-OSI
+
 ![ISO-OSI-Modell](https://img.devrant.com/devrant/rant/r_2081122_Phhqp.jpg)
 
 ISO-OSI ist das ganz dolle Standardmodell aus den 1980ern. Es ist ein 7-Schichtenmodell, das die Kommunikation zwischen zwei Geräten beschreibt.
@@ -60,11 +62,11 @@ Aber teilweise auch sowas wie [Medienzugriff](/syscom/teachings/halt-haltmaldein
 Mittlerweile hauptsächlich IP. Aber hierzu zählen auch die anderen Protokolle wir ARP etc.
 
 - **Schicht 4: Transport-Schicht**
-TCP, UDP etc. Es sorgt für die Segmentierung von einem Datemstrom zu IP-Paketen und umgekehrt. Es sorgt dafür das die oberen Schichten sich nicht mit dem Netzwerk auseinandersetzen müssen.
+  TCP, UDP etc. Es sorgt für die Segmentierung von einem Datemstrom zu IP-Paketen und umgekehrt. Es sorgt dafür das die oberen Schichten sich nicht mit dem Netzwerk auseinandersetzen müssen.
 
 - **Schicht 5: Sitzungsschicht**
 
-Hier sind wenige Protokolle aber eins davon ist zum Beispiel RPC (Remote-Procedure-Call). Hier kommunizieren vorallem zwei 
+Hier sind wenige Protokolle aber eins davon ist zum Beispiel RPC (Remote-Procedure-Call). Hier kommunizieren vorallem zwei
 
 - **Schicht 6: Darstellungsschicht**
 
@@ -74,7 +76,7 @@ Hier sind so Sachen wie Verschlüsselung also z.B. SSL/TLS, etc. und Kompression
 
 Kann alles sein aber mittlerweile auch viel HTTP, SMPT, IMAP, SSH.
 
-## TCP/IP 
+## TCP/IP
 
 TCP/IP ist tatsächlich einfacher gehalten und ist der Stack den man heute größtenteils verwendet. Es beschreibt nur die **wirklich** großen Schichten. Die anderen sind dann in denen zusammengefasst.
 
@@ -98,21 +100,19 @@ Kombiniert die drei Schichten Sitzungs-, Darstellungs- und Anwendungsschicht. Di
 
 ## Aufgaben
 
-?> Hiervon kommt eigentlich immer irgendeine kleine Abfrage. Es lohnt sich also aufjeden Fall die Schichten und die Nomenklatur(Dienst und Protokoll) zu kennen. 
+?> Hiervon kommt eigentlich immer irgendeine kleine Abfrage. Es lohnt sich also aufjeden Fall die Schichten und die Nomenklatur(Dienst und Protokoll) zu kennen.
 Selbst in den anderen Aufgaben ist es praktisch formal zu sein.
 
 x> Erleutern sie knapp die Begriffe Dienst, Protkoll, Dienstprimitiv, Instanz, Dienstzugangspunkt, etc.
 
-<Spoiler>
-Sieh oben :D 
-</Spoiler>
+<Spoiler>Sieh oben :D</Spoiler>
 
 x> Erklären sie die Unterschiede zwischen dem ISO-OSI-Modell und dem TCP/IP-Modell
 
 <Spoiler>
-naja auch siehe oben. TCP fasst ein paar Schichten zusammen, da Protokolle wie Ethernet ebenfalls mehrere Schichten abdecken.
+  naja auch siehe oben. TCP fasst ein paar Schichten zusammen, da Protokolle wie
+  Ethernet ebenfalls mehrere Schichten abdecken.
 </Spoiler>
-
 
 x> Erklären sie den Unterschied zwischen horizontaler und vertikaler Kommunikation
 
@@ -120,15 +120,13 @@ x> Erklären sie den Unterschied zwischen horizontaler und vertikaler Kommunikat
 
 Horizontal ist die Kommunikation zwischen zwei Instanzen einer Schicht. Vertikal ist die Kommunikation zwischen zwei Instanzen von verschiedenen Schichten.
 
-Wenn man mit einem Webserver mit HTTP kommuniziert erfolgt die direkte Kommunikation der Anwendung nur über ein simples HTTP.Get an die andere Seite (horizontale). 
-Die Kommunikation geht dann aber eigentlich einmal komplett durch die Schichten 
+Wenn man mit einem Webserver mit HTTP kommuniziert erfolgt die direkte Kommunikation der Anwendung nur über ein simples HTTP.Get an die andere Seite (horizontale).
+Die Kommunikation geht dann aber eigentlich einmal komplett durch die Schichten
 
 [HTTP] $\to$ [TCP] $\to$ [IP] $\to$ [WIFI] $\to \dots \to$ [Ethernet] $\to$ [IP] $\to$ [TCP] $\to$ [HTTP]
 
 Das ist dann vertikal.
 
 </Spoiler>
-
-
 
 <ISOOSI></ISOOSI>
