--- a/teachings/syscom/Ethernet.mdx
+++ b/teachings/syscom/Ethernet.mdx
@@ -6,7 +6,14 @@ order: 1
 author: Jonas Schneider
 ---
 
-<iframe src="https://giphy.com/embed/5aY2MOdRZ2y8kQfIHH" width="480" height="270" frameBorder="0" className="giphy-embed" allowFullScreen></iframe>
+<iframe
+  src="https://giphy.com/embed/5aY2MOdRZ2y8kQfIHH"
+  width="480"
+  height="270"
+  frameBorder="0"
+  className="giphy-embed"
+  allowFullScreen
+></iframe>
 $\uparrow$
 
 WLAN KABEL
@@ -17,6 +24,7 @@ WLAN KABEL
 
 Ethernet ist nicht umbedingt ein Standard, es wurde oft erweitert (für z.B. 100MBit/s etc) somit unterscheiden sich die Codierungen mehr dazu [hier](/syscom/teachings/machester-werwillnachmanchaster)
 Die Verteilung sieht so aus:
+
 - < 100MBit/s: [Manchester](/syscom/teachings/machester-werwillnachmanchaster##Manchaster)
 - < 1 GBit/s: [4B5B](/syscom/teachings/machester-werwillnachmanchaster##4B5B)
 - \> 1 GBit/s: 8B10B (nicht wichtig)
@@ -26,11 +34,11 @@ Es besteht also aus den Folgenden Teilen:
 - **Prämbel (8Byte)**:
   Die ist Hauptsächlich zum Synchonisieren der Clocks da... deswegen das 10101010... Pattern.
 
-  Sie wird von dem Start-Frame-Delimiter[SFD] (10101011) beendet. 
+  Sie wird von dem Start-Frame-Delimiter[SFD] (10101011) beendet.
 
 - **Ziel-MAC-Adresse (6Byte)**:
-  Das was es sagt :\. MAC-Adressen sind 6-Byte (48Bit) lang und müssen nicht zwanghaft global eindeutig sein. Die ersten beiden Bit der MAC-Adresse entscheiden 
-  ob es sich um eine Multicast(1)- oder Unicast(0) handelt, das zweite Bit entscheidet ob die MAC-Adresse lokal(1) oder global(0) adminstriert werden. 
+  Das was es sagt :\. MAC-Adressen sind 6-Byte (48Bit) lang und müssen nicht zwanghaft global eindeutig sein. Die ersten beiden Bit der MAC-Adresse entscheiden
+  ob es sich um eine Multicast(1)- oder Unicast(0) handelt, das zweite Bit entscheidet ob die MAC-Adresse lokal(1) oder global(0) adminstriert werden.
 
 - **Quell-MAC-Adresse (6Byte)**:
   Ebenso wie die Ziel Adresse.
@@ -38,12 +46,11 @@ Es besteht also aus den Folgenden Teilen:
 - **VLAN-Tags (4Byte)**:
   Irgendwelche Randsachen unteranderem mit Kopabilität. Nicht so wichtig vergesst es bis auf die Existenz.
 
-
 - **Typ-Feld (2Byte)**:
-Das ist weird. Hier wird dekodiert welches höheres Protokoll die Nutzdaten entsprechen. Obwohl Ethernet eigentlich nach ISO/OSI nichts damit zu tun hat, wird es hier kodiert. Z.B. *0x0800* für IPv4 
+  Das ist weird. Hier wird dekodiert welches höheres Protokoll die Nutzdaten entsprechen. Obwohl Ethernet eigentlich nach ISO/OSI nichts damit zu tun hat, wird es hier kodiert. Z.B. _0x0800_ für IPv4
 
 - **Daten** (42-1500Byte):
-Das wichtigste. Eigentlich Selbsterklärend
+  Das wichtigste. Eigentlich Selbsterklärend
 
 ## **TAIL**
 
@@ -51,7 +58,10 @@ Anders als praktisch alle anderen Protokolle hiernach ist, das Ethernet auch erk
 
 Hierfür kommmt zuerst das PAD-Feld, welches auch unteranderem das Frame padded bis es minimal 64 Byte hat. Hier ist natürlich wichtig das z.b. Bit-Stuffing verwendet wird, damit man das PAD-Feld erkennen kann.
 
-<p className="small">(PSSS: Bit-Stuffing war das mit dem ersteten von dem Pattern(z.b. 0111 => 01101) und dem Rückwandeln danach</p>
+<p className="small">
+  (PSSS: Bit-Stuffing war das mit dem ersteten von dem Pattern(z.b. 0111 =>
+  01101) und dem Rückwandeln danach
+</p>
 
 Und dann gibt es noch das Frame-Check-Sequence[FCS](CRC Check) also eine Prüfsumme mit [Cyclic-Redundency-Check](/syscom/teachings/checksandbalance)
 
@@ -66,7 +76,3 @@ Eigentlich sind die meisten Aufgaben direkt für Layer 2 und [Medienzugriff](/sy
 Zusätzlich hatten wir ganz am Anfang auch noch das HDLC Protokoll hier schreib ich später nochmal was dazu.
 
 //TODO: HDLC
-
-
-
-
