--- a/teachings/syscom/machester-werwillnachmanchaster.mdx
+++ b/teachings/syscom/machester-werwillnachmanchaster.mdx
@@ -4,7 +4,7 @@ description: Das Nachschlagwerk der codierungsarten
 tags: [layer1]
 order: 2
 author: Jonas Schneider
---- 
+---
 
 ## Überblick
 
@@ -24,7 +24,7 @@ und es gibt Biphase-codes, die eine **Selbsttaktung**, wo die Clocks snychronisi
 
 Letztendlich gibt es noch die richtig abgefahrenen Arten wie:
 
-- **4B/5B:** Hier wird diff. NRZ  verwendet aber man bildet je 4Bit eingabe auf 5Bit Übertragung ab, somit behält man eine gute Effizienz und selbsttaktung
+- **4B/5B:** Hier wird diff. NRZ verwendet aber man bildet je 4Bit eingabe auf 5Bit Übertragung ab, somit behält man eine gute Effizienz und selbsttaktung
 
 - 8B/10B: Ähnlich wie 4B/5B, nur mit 8Bit Eingabe und 10Bit Übertragung, wird für 1 GBit/s Ethernet verwendet.
 
@@ -64,6 +64,7 @@ Shannon berechnet theoretische maximale Datenrate bei Zufälligen Rauschen:
 
 Hier bekommt man eigentlich immer den Signal-Rausch-Abstand (SNR) und muss dann die Datenrate berechnen.
 Hierfür sind diese Formeln hilfreich:
+
 - $20db \approx 10^2$
 - $30db \approx 10^3$
 - $50db \approx 10^5$
@@ -78,13 +79,13 @@ Nyquist hingegen berechnet die maximale Datenrate bei einem störungsfreien Kana
 
 auch hier nur einsetzten.
 
-Für die kombination der beiden gilt dann natürlich 
+Für die kombination der beiden gilt dann natürlich
 
 $C_{max} = \min(C_{Shannon}, C_{Nyquist})$
 
 ## **Abtasttheorem**
 
-Das Abtasttheorem besagt, das wenn man eine Frequenz $f_{A}$ abtasten will, muss die Grenzfreuquenz $f_{G}$ mindestens $2f_{A}$ betragen. 
+Das Abtasttheorem besagt, das wenn man eine Frequenz $f_{A}$ abtasten will, muss die Grenzfreuquenz $f_{G}$ mindestens $2f_{A}$ betragen.
 Damit man z.B. nicht immer nur Hügel misst und immer das Tal verpasst.
 
 <hr className="border-black"></hr>
@@ -94,31 +95,32 @@ Damit man z.B. nicht immer nur Hügel misst und immer das Tal verpasst.
 x> Zeichne die Codierung von 10101010 mit NRZ, Manchester und Biphase
 
 <Spoiler>
-Naja wenn man das geübt hat, geht das wie alles andere auch. Wendet einfach immer wieder das Schema an und verwecheslt die einzelnen Subklassen nicht.
+  Naja wenn man das geübt hat, geht das wie alles andere auch. Wendet einfach
+  immer wieder das Schema an und verwecheslt die einzelnen Subklassen nicht.
 </Spoiler>
 
 x> Decodiere die Codierung von dem NRZ code (BILD)...
 
-<Spoiler>
-Naja easy.
-</Spoiler>
+<Spoiler>Naja easy.</Spoiler>
 
 x> Es ist eine Schrittgeschwidigkeit von $1000$ baud gegeben. Berechne die Übertragungsgeschwindigkeit für NRZ, Manchester und Biphase
 
 <Spoiler>
-Wie oben $1000$ baud mit NRZ ist $1000$ Bit/s, mit Manchester $500$ Bit/s und mit Biphase $500$ Bit/s.
+  Wie oben $1000$ baud mit NRZ ist $1000$ Bit/s, mit Manchester $500$ Bit/s und
+  mit Biphase $500$ Bit/s.
 </Spoiler>
 
 x> Gegeben ein Signalbild, welche Modulation wurde verwendet?
 
 <Spoiler>
-Dann muss man auf unterschiedliche Frequenzen, Amplituden und Phasen achten. Gegebenenfalls mehreres.
+  Dann muss man auf unterschiedliche Frequenzen, Amplituden und Phasen achten.
+  Gegebenenfalls mehreres.
 </Spoiler>
 
 x> Decodiere oder codiere mit einer 16QAM Modulation
 
 <Spoiler>
-Dann bekommt man diese Zielscheibe und muss dann was ablesen oder so.
+  Dann bekommt man diese Zielscheibe und muss dann was ablesen oder so.
 </Spoiler>
 
 x> Zusammen mit Nyquist und Shannon, ist eine 256QAM einsetztbar
@@ -127,10 +129,12 @@ x> Zusammen mit Nyquist und Shannon, ist eine 256QAM einsetztbar
 !> $C = 2 \cdot B \cdot \log_2(n)$ mit $n = $ Anzahl der möglichen Zustände und $B = $ Bandbreite
 
 Somit muss man die theoretische maximale Daterate mit Shannon berechnen und dann Nyquist für 256Zustände berechnen, falls es $\ge$ ist, dann ist es einsetzbar.
+
 </Spoiler>
 
 x> Welche Datenrate wird benötigt bei einer Abtastung von $20Hz-20kHz$ möglich bei $16Bit$ quantisierung?
 
 <Spoiler>
-Wegen Abtasttheorem $40Khz$ und dann $16Bit$ quantisierung, also $40000 \cdot 16 = 640000$ Bit/s
+  Wegen Abtasttheorem $40Khz$ und dann $16Bit$ quantisierung, also $40000 \cdot
+  16 = 640000$ Bit/s
 </Spoiler>
