--- a/teachings/wsi/Testtheorie.mdx
+++ b/teachings/wsi/Testtheorie.mdx
@@ -1,6 +1,6 @@
 ---
 title: Flugzeug stürzt nur mit 90% Wahrscheinlichkeit nicht ab (Hypothesentests)
-description: 
+description:
 author: Jonas Schneider
 date: 24/07/2023
 order: 10
@@ -21,7 +21,7 @@ die entweder $H_0$ oder $H_1$ akzeptiert.
 Es gibt nun folgende Fehlertypen:
 
 |       | $H_0$ richtig     | $H_1$ richtig     |
-|-------|-------------------|-------------------|
+| ----- | ----------------- | ----------------- |
 | $H_0$ | Korrekt           | **Fehler 2. Art** |
 | $H_1$ | **Fehler 1. Art** | Korrekt           |
 
@@ -29,11 +29,11 @@ Es gibt nun folgende Fehlertypen:
 
 Das **Signifikanzniveau** $\alpha$ ist die Wahrscheinlichkeit für einen Fehler 1. Art, also $P_{H_0}("H_1") \le a$.
 
-Die **Schärfe** $ 1 - \beta$ ist die **Gegenwahrscheinlichkeit** für einen Fehler 2. Art, also $P_{H_1}("H_0") \le \beta$.  
+Die **Schärfe** $ 1 - \beta$ ist die **Gegenwahrscheinlichkeit** für einen Fehler 2. Art, also $P_{H_1}("H_0") \le \beta$.
 
-|       | $H_0$ richtig     | $H_1$ richtig     |
-|-------|-------------------|-------------------|
-| $H_0$ | Korrekt: $1-\alpha$           | **Fehler 2. Art**: $\beta$ |
+|       | $H_0$ richtig               | $H_1$ richtig                |
+| ----- | --------------------------- | ---------------------------- |
+| $H_0$ | Korrekt: $1-\alpha$         | **Fehler 2. Art**: $\beta$   |
 | $H_1$ | **Fehler 1. Art**: $\alpha$ | Korrekt: $1-\beta$ (Schärfe) |
 
 ## Hypothesen
@@ -56,29 +56,34 @@ Tests:
 - verwerfe $H_0: \mu = \mu_0$ gegen $H_1: \mu \ne \mu_0$ wenn: $|T| > t(n-1)_{1-\frac{\alpha}{2}}$
 
 Beispiel aus der Vorlesung:
+
 > Die Schätzung der mittleren Ozonkonzentration während der
-  Sommermonate ergaben für eine Großstadt anhand von $n = 26$ Messungen
-  den Mittelwert $\overline{x}_n$ = 244 und die Stichproben-Standardabweichung $s = 5.1$
-  (jeweils in $\frac{\mu g}{m^3}$ ).
-  Der im Ozongesetz von 1995 festgelegte verbindliche Alarmwert beträgt
-  $240 \frac{\mu g}{m^3}$ . Kann das gemessene Ergebnis als signifikante Überschreitung
-  des Warnwerts gewertet werden zum Signifikanzniveau $\alpha = 0.01$?
+> Sommermonate ergaben für eine Großstadt anhand von $n = 26$ Messungen
+> den Mittelwert $\overline{x}_n$ = 244 und die Stichproben-Standardabweichung $s = 5.1$
+> (jeweils in $\frac{\mu g}{m^3}$ ).
+> Der im Ozongesetz von 1995 festgelegte verbindliche Alarmwert beträgt
+> $240 \frac{\mu g}{m^3}$ . Kann das gemessene Ergebnis als signifikante Überschreitung
+> des Warnwerts gewertet werden zum Signifikanzniveau $\alpha = 0.01$?
 
 <Spoiler>
 
-  Teststatistik: $t = T_{obs} = \sqrt{26}\frac{244-240}{5.1} = 3.999$
-  Die Statistik ist $t(n-1 = 25)$-verteilt. Da $t > t(25)_{0.99} = 2.485$ ist, wird die Nullhypothese verworfen und $H_1$ angenommen.
-  
-  Antwort: Durch einen Signifikanztest (1-Stichproben t-Test) konnte mit einem Signifikanzniveau von 1% nachgewiesen werden, dass der Alarmwert $240$ überschritten wurde.
+Teststatistik: $t = T_{obs} = \sqrt{26}\frac{244-240}{5.1} = 3.999$
+Die Statistik ist $t(n-1 = 25)$-verteilt. Da $t > t(25)_{0.99} = 2.485$ ist, wird die Nullhypothese verworfen und $H_1$ angenommen.
+
+Antwort: Durch einen Signifikanztest (1-Stichproben t-Test) konnte mit einem Signifikanzniveau von 1% nachgewiesen werden, dass der Alarmwert $240$ überschritten wurde.
+
 </Spoiler>
 
 ### $p$-Wert
+
 Guckt sich an, wie wahrscheinlich es ist, dass bei einer Wiederholung ein Wert entsteht, der noch mehr gegen $H_0$ spricht als $t_{obs}$
 
 ## Gütefunktionen & 2-Stichproben-Tests
+
 Kein Bock darauf. Vielleicht später
 
 ## Binomial-Test
+
 $X_1, ..., X_n \sim F$
 F besitzt eindeutigen Median $m$ und $F(m) = 0.5$.
 
@@ -89,7 +94,8 @@ Dies lässt sich zurückführen auf den Binomial-Test:
 
 $Y \sim Bin(n,p) \quad p = P(Y_1 > m_0)$
 
-Bzw. 
+Bzw.
+
 - $H_0: p = p_0$ gegen $H_1: p \ne p_0$
 - $H_0: p \le p_0$ gegen $H_1: p > p_0$
 
